--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js
     "></script>
     <script>
-    const socket=io('http://localhost:4001');
+      const socket = io('http://localhost:4001');
 
-    socket.on('connection',(data)=>console.log(data));
-
+      socket.on('connection', data => console.log(data));
+      socket.on('newcontent', newcontent => console.log(newcontent));
     </script>
-</body>
+  </body>
 </html>
